Completati i metodi di "GameState" per le regole complete, aggiunta del metodo "updateCorrectness()" nella classe "ShipBoard" per determinare se una nave è assemblata correttamente.